@@ -19,10 +19,6 @@ use Test::More 'no_plan';
         return $this - $that;
     }
 
-    method echo($message = "what?") {
-        return $message
-    }
-
     is( Stuff->add(),    23 + 42 );
     is( Stuff->add(99),  99 + 42 );
     is( Stuff->add(2,3), 5 );
@@ -31,7 +27,22 @@ use Test::More 'no_plan';
     is( Stuff->minus(99),       99 - 42 );
     is( Stuff->minus(2, 3),     2 - 3 );
 
+
+    # Test that undef overrides defaults
+    method echo($message = "what?") {
+        return $message
+    }
+
     is( Stuff->echo(),          "what?" );
     is( Stuff->echo(undef),     undef   );
     is( Stuff->echo("who?"),    'who?'  );
+
+
+    # Test that you can reference earlier args in a default
+    method copy_cat($this, $that = $this) {
+        return $that;
+    }
+
+    is( Stuff->copy_cat("wibble"), "wibble" );
+    is( Stuff->copy_cat(23, 42),   42 );
 }
