@@ -1,6 +1,16 @@
 0.11
+    New Features
+    * Added the "$arg!" required syntax (currently does nothing)
+
     New Docs
     - Documented how to set a trait and a default
+    * Document that earlier params may be used in defaults.
+    * Document that @_ is left intact
+    * Clarify aliased ref behavior
+    * Document anonymous methods
+
+    Bug Fixes
+    * Protect against complicated default expressions
 
 
 0.10  Sun Sep 21 20:04:41 PDT 2008
